syntax = "proto3";
package proto;

message S2C_Chat
{
	string sender_name = 1; // 보낸 사람 이름
	string content = 2; // 메시지 내용
	uint64 client_message_id = 3; // 보낸 클라가 넣은 값(없으면 0)
	uint64 server_message_id = 4; // 서버가 부여하는 전역 순번
	int64  server_sent_at_ms = 5; // 서버 기준 시간(ms since epoch)
	uint32 sender_session_id = 6; // 보낸 세션 식별(표시/필터용)
}

message C2S_Chat
{
	string sender_name = 1; // 보낸 사람 이름
	string content = 2; // 메시지 내용
	uint64 client_message_id = 3; // 클라가 임시 ID 부여
	int64  client_sent_at_ms = 4; // 선택(진단/지표용)
}
